# rsactor

./: CHANGELOG.md  Cargo.toml  README.md  cargo-publish.sh  generate_coverage.sh  install-skills.sh  run_examples.sh
.claude-plugin/: marketplace.json
.github/: dependabot.yml  pr-labeler.yml
.github/workflows/: book.yml  msrv.yml  pr-labeler.yml  release.yml  rust.yml  security.yml
book/: book.toml
book/src/: SUMMARY.md  advanced.md  communicating_with_actors.md  core_concepts.md  creating_actors.md  error_handling.md  examples.md  faq.md  getting_started.md  introduction.md  macros.md  timeouts.md
book/src/advanced/: actor_control.md  dead_letters.md  deadlock_detection.md  handler_traits.md  metrics.md  tracing.md  weak_references.md
book/src/communicating_with_actors/: ask.md  tell.md
book/src/core_concepts/: actor_lifecycle.md  actor_ref.md  messages.md  what_is_an_actor.md
book/src/creating_actors/: async_actors.md  basic_actors.md  blocking_task_actors.md
book/src/error_handling/: actor_result.md
book/src/examples/: actor_with_timeout.md  ask_join.md  async_worker.md  basic.md  blocking_task.md  dining_philosophers.md  handler_demo.md  kill_demo.md  metrics.md  tracing.md  weak_references.md
book/src/macros/: unified_macro.md
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/skills/rsactor-actor/: SKILL.md
claude-plugin/skills/rsactor-handler/: SKILL.md
docs/: Architecture.md  FAQ.md  actor_model.md  best_practices.md  creation.puml  deadlock_detection.md  debugging_guide.md  error_handling.puml  getting_started.md  handler_traits_design.md  lifecycle.puml  message_passing.puml  metrics.md  tell_error_logging.md  termination.puml  tracing.md  type_safety.puml
examples/: actor_async_worker.rs  actor_blocking_task.rs  actor_task.rs  actor_with_timeout.rs  advanced_derive_demo.rs  ask_join_demo.rs  basic.rs  counter.rs  derive_macro_demo.rs  dining_philosophers.rs  handler_demo.rs  kill_demo.rs  message_macro_demo.rs  metrics_demo.rs  priority_signal.rs  tracing_demo.rs  unified_macro_demo.rs  weak_reference_demo.rs
rsactor-derive/: Cargo.toml
rsactor-derive/src/: lib.rs
skills/rsactor-actor/: SKILL.md
skills/rsactor-guide/: SKILL.md
skills/rsactor-handler/: SKILL.md
src/: actor.rs  actor_control.rs  actor_ref.rs  actor_result.rs  dead_letter.rs  error.rs  errors.rs  handler.rs  lib.rs  message.rs  system.rs
src/actor/: context.rs  messages.rs  mod.rs  properties.rs  runtime.rs  supervision.rs
src/metrics/: collector.rs  mod.rs  snapshot.rs
tests/: actor_control_tests.rs  actor_ref_drop_tests.rs  actor_result_tests.rs  ask_join_tests.rs  blocking_without_runtime_tests.rs  comprehensive_alternatives_test.rs  coverage_improvement_tests.rs  dead_letter_reset_test.rs  deadlock_detection_tests.rs  debugging_tools_tests.rs  derive_macro_tests.rs  function_message_types_tests.rs  generic_closure_types_test.rs  generic_tests.rs  handler_tests.rs  message_handlers_macro_tests.rs  panic_handling_tests.rs  priority_signal_tests.rs  simple_function_types_test.rs  tell_error_logging_tests.rs  tests.rs  trait_object_without_box_test.rs
