[package]
name = "rsactor"
version = "0.7.2"
edition = "2021"
rust-version = "1.75.0"
description = "A Simple and Efficient In-Process Actor Model Implementation for Rust."
authors = ["Jeff Kim <hiking90@gmail.com>"]
repository = "https://github.com/hiking90/rsactor"
homepage = "https://github.com/hiking90/rsactor"
license = "Apache-2.0"
keywords = ["actor", "rust", "framework"]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
log = "0.4"

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.11"
futures = "0.3"
rand = "0.9"