[workspace]
members = [".", "rsactor-derive"]

[workspace.package]
version = "0.9.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Jeff Kim <hiking90@gmail.com>"]
repository = "https://github.com/hiking90/rsactor"
homepage = "https://github.com/hiking90/rsactor"
license = "Apache-2.0"
readme = "README.md"
keywords = ["actor", "rust", "framework"]

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
log = "0.4"
anyhow = "1.0"
env_logger = "0.11"
futures = "0.3"
rand = "0.9"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[package]
name = "rsactor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A Simple and Efficient In-Process Actor Model Implementation for Rust."
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
tokio.workspace = true
log.workspace = true
rsactor-derive = { version = "0.9", path = "rsactor-derive" }
tracing = { workspace = true, optional = true }
futures = "0.3"

[dev-dependencies]
anyhow.workspace = true
env_logger.workspace = true
futures.workspace = true
rand.workspace = true
tracing-subscriber.workspace = true