[workspace]
members = [".", "rsactor-derive"]

[workspace.package]
version = "0.14.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Jeff Kim <hiking90@gmail.com>"]
repository = "https://github.com/hiking90/rsactor"
homepage = "https://hiking90.github.io/rsactor"
license = "Apache-2.0"
readme = "README.md"
keywords = ["actor", "rust", "framework"]

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
anyhow = "1.0"
futures = "0.3"
rand = "0.10"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[package]
name = "rsactor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A Simple and Efficient In-Process Actor Model Implementation for Rust."
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true

[features]
default = []
# `tracing` feature now ONLY controls #[tracing::instrument] attributes.
# The tracing crate itself is ALWAYS available for logging (warn!, error!, etc.)
tracing = []
metrics = []     # Actor performance metrics (message count, processing time, etc.)
test-utils = []  # Enable dead letter counter for integration tests
                 # WARNING: Never enable in production builds!
deadlock-detection = []  # Runtime deadlock detection for ask cycles (panics on detection)

[dependencies]
tokio.workspace = true
rsactor-derive = { version = "0.14", path = "rsactor-derive" }
tracing.workspace = true  # Now REQUIRED (was optional) - provides logging infrastructure
futures = "0.3"

[dev-dependencies]
anyhow.workspace = true
futures.workspace = true
rand.workspace = true
tracing-subscriber.workspace = true

[[test]]
name = "debugging_tools_tests"
required-features = ["test-utils"]

[[test]]
name = "dead_letter_reset_test"
required-features = ["test-utils"]

[[test]]
name = "deadlock_detection_tests"
required-features = ["deadlock-detection"]