[package]
name = "rsactor-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Derive macros for rsActor framework"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
rsactor = { path = "../" }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
